<resources>
    <string name="app_name">Coffee Ordering App</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="login_screen_label">Login</string>
    <string name="order_screen_label">Menu</string>
    <string name="itemselection_screen_label">Item Selection</string>
    <string name="accountcreation_screen_label">Account Creation</string>
    <string name="orderplaced_screen_label">Your Order has been placed</string>
    <string name="next">Next</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="placeorder">Place Order</string>
    <string name="email">Username / Email</string>
    <string name="pastorders">View Past Orders</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="newemail">New Email</string>
    <string name="previous">Previous</string>
    <string name="login">Login</string>
    <string name="newpassword">New Password</string>
    <string name="workerview">Worker View</string>
    <string name="createaccount">Create Account</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>