<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/LoginScreen">

    <fragment
        android:id="@+id/LoginScreen"
        android:name="com.cjcj55.scrum_project_1.LoginScreen"
        android:label="@string/login_screen_label"
        tools:layout="@layout/loginui">
        <action
            android:id="@+id/action_LoginScreen_to_OrderScreen"
            app:destination="@id/OrderScreen" />
        <action
            android:id="@+id/action_LoginScreen_to_AccountCreationScreen"
            app:destination="@id/AccountCreationScreen" />
    </fragment>
    <fragment
        android:id="@+id/OrderScreen"
        android:name="com.cjcj55.scrum_project_1.OrderScreen"
        android:label="@string/order_screen_label"
        tools:layout="@layout/orderui">
        <action
            android:id="@+id/action_OrderScreen_to_ItemSelectionScreen"
            app:destination="@id/ItemSelectionScreen" />
        <action
            android:id="@+id/action_OrderScreen_to_PreviousOrderScreen"
            app:destination="@id/PreviousOrderScreen" />
        <action
            android:id="@+id/action_OrderScreen_to_CheckoutCartScreen"
            app:destination="@id/CheckoutCartScreen" />
        <action
            android:id="@+id/action_OrderScreen_to_LoginScreen"
            app:destination="@id/LoginScreen" />
        <action
            android:id="@+id/action_OrderScreen_to_SysAdminScreen"
            app:destination="@id/SysAdminScreen" />
        <action
            android:id="@+id/action_OrderScreen_to_WorkerOrderScreen"
            app:destination="@id/WorkerOrderScreen" />
    </fragment>
    <fragment
        android:id="@+id/ItemSelectionScreen"
        android:name="com.cjcj55.scrum_project_1.ItemSelectionScreen"
        android:label="@string/itemselection_screen_label"
        tools:layout="@layout/itemselectionui">
        <action
            android:id="@+id/action_ItemSelectionScreen_to_OrderScreen"
            app:destination="@id/OrderScreen" />
    </fragment>

    <fragment
        android:id="@+id/OrderHasBeenPlacedScreen"
        android:name="com.cjcj55.scrum_project_1.OrderHasBeenPlacedScreen"
        android:label="@string/orderplaced_screen_label"
        tools:layout="@layout/orderhasbeenplacedui">
        <action
            android:id="@+id/action_OrderHasBeenPlacedScreen_to_OrderScreen"
            app:destination="@id/OrderScreen" />
    </fragment>
    <fragment
        android:id="@+id/PreviousOrderScreen"
        android:name="com.cjcj55.scrum_project_1.PreviousOrderScreen"
        android:label="Past Orders"
        tools:layout="@layout/viewpastorderui">
        <action
            android:id="@+id/action_PreviousOrderScreen_to_OrderScreen"
            app:destination="@id/OrderScreen" />
    </fragment>
    <fragment
        android:id="@+id/CheckoutCartScreen"
        android:name="com.cjcj55.scrum_project_1.CheckoutCartScreen"
        android:label="Checkout"
        tools:layout="@layout/checkoutcartui">
        <action
            android:id="@+id/action_CheckoutCartScreen_to_OrderHasBeenPlacedScreen"
            app:destination="@id/OrderHasBeenPlacedScreen" />
        <action
            android:id="@+id/action_CheckoutCartScreen_to_OrderScreen"
            app:destination="@id/OrderScreen" />
    </fragment>
    <fragment
        android:id="@+id/WorkerOrderScreen"
        android:name="com.cjcj55.scrum_project_1.WorkerOrderScreen"
        android:label="Orders"
        tools:layout="@layout/workescreenui">
        <action
            android:id="@+id/action_WorkerOrderScreen_to_OrderScreen"
            app:destination="@id/OrderScreen" />
    </fragment>
    <fragment
        android:id="@+id/SysAdminScreen"
        android:name="com.cjcj55.scrum_project_1.SysAdminScreen"
        android:label="Adminstration"
        tools:layout="@layout/sysadminui">
        <action
            android:id="@+id/action_SysAdminScreen_to_OrderScreen"
            app:destination="@id/OrderScreen" />
        <action
            android:id="@+id/action_SysAdminScreen_to_AddFlavorScreen"
            app:destination="@id/AddFlavorScreen" />
        <action
            android:id="@+id/action_SysAdminScreen_to_RemoveToppingScreen"
            app:destination="@id/RemoveToppingScreen" />
        <action
            android:id="@+id/action_SysAdminScreen_to_RemoveCoffeeScreen"
            app:destination="@id/RemoveCoffeeScreen" />
        <action
            android:id="@+id/action_SysAdminScreen_to_AddCoffeeScreen"
            app:destination="@id/AddCoffeeScreen" />
        <action
            android:id="@+id/action_SysAdminScreen_to_AddToppingScreen"
            app:destination="@id/AddToppingScreen" />
        <action
            android:id="@+id/action_SysAdminScreen_to_RemoveFlavorScreen"
            app:destination="@id/RemoveFlavorScreen" />
    </fragment>

    <fragment
        android:id="@+id/AddCoffeeScreen"
        android:name="com.cjcj55.scrum_project_1.AddCoffeeScreen"
        android:label="Add Coffee(s)"
        tools:layout="@layout/addcoffeeui"/>

    <fragment
        android:id="@+id/RemoveCoffeeScreen"
        android:name="com.cjcj55.scrum_project_1.RemoveCoffeeScreen"
        android:label="Remove Coffee(s)"
        tools:layout="@layout/removecoffeeui"/>

    <fragment
        android:id="@+id/AddToppingScreen"
        android:name="com.cjcj55.scrum_project_1.AddToppingScreen"
        android:label="Add Topping(s)"
        tools:layout="@layout/addtoppingui"/>

    <fragment
        android:id="@+id/RemoveToppingScreen"
        android:name="com.cjcj55.scrum_project_1.RemoveToppingScreen"
        android:label="Remove Topping(s)"
        tools:layout="@layout/removetoppingui"/>

    <fragment
        android:id="@+id/AddFlavorScreen"
        android:name="com.cjcj55.scrum_project_1.AddFlavorScreen"
        android:label="Add Flavor(s)"
        tools:layout="@layout/addflavorui"/>

    <fragment
        android:id="@+id/RemoveFlavorScreen"
        android:name="com.cjcj55.scrum_project_1.RemoveFlavorScreen"
        android:label="Remove Flavor(s)"
        tools:layout="@layout/removeflavorui"/>


    <fragment
        android:id="@+id/AccountCreationScreen"
        android:name="com.cjcj55.scrum_project_1.AccountCreationScreen"
        android:label="@string/accountcreation_screen_label"
        tools:layout="@layout/accountcreationui">
        <action
            android:id="@+id/action_AccountCreationScreen_to_LoginScreen"
            app:destination="@id/LoginScreen" />
    </fragment>
</navigation>